HexTile now has a script and type. HexTiles selects one at random from a list.

--- a/Projects/SheepCreek/SheepCreek.csproj
+++ b/Projects/SheepCreek/SheepCreek.csproj
@@ -231,6 +231,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Objects\HexTile\Scripts\HexTile.cs" />
     <Compile Include="Assets\Objects\HexTiles\Scripts\GaussianRandom.cs" />
     <Compile Include="Assets\Objects\HexTiles\Scripts\HexTiles.cs" />
     <Compile Include="Assets\Objects\HexTiles\Scripts\ShuffleRandom.cs" />
