--- a/Projects/SheepCreek/SheepCreek.csproj
+++ b/Projects/SheepCreek/SheepCreek.csproj
@@ -234,7 +234,7 @@
     <Compile Include="Assets\Objects\HexTile\Scripts\HexTile.cs" />
     <Compile Include="Assets\Objects\HexTiles\Scripts\GaussianRandom.cs" />
     <Compile Include="Assets\Objects\HexTiles\Scripts\HexTiles.cs" />
-    <Compile Include="Assets\Objects\HexTiles\Scripts\ShuffleRandom.cs" />
+    <Compile Include="Assets\Objects\HexTiles\Scripts\ListRandom.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
