--- a/Projects/SheepCreek/SheepCreek.csproj
+++ b/Projects/SheepCreek/SheepCreek.csproj
@@ -235,6 +235,7 @@
     <Compile Include="Assets\Objects\HexTiles\Scripts\GaussianRandom.cs" />
     <Compile Include="Assets\Objects\HexTiles\Scripts\HexTiles.cs" />
     <Compile Include="Assets\Objects\HexTiles\Scripts\ListRandom.cs" />
+    <Compile Include="Assets\Sounds\Music\Music.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
