Basic script stuff. Made the music fade in.

--- a/Projects/SheepCreek/SheepCreek.csproj
+++ b/Projects/SheepCreek/SheepCreek.csproj
@@ -231,12 +231,14 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Objects\Dog\Scripts\Dog.cs" />
     <Compile Include="Assets\Objects\HexTile\Scripts\HexTile.cs" />
     <Compile Include="Assets\Objects\HexTiles\Scripts\GaussianRandom.cs" />
     <Compile Include="Assets\Objects\HexTiles\Scripts\HexTiles.cs" />
     <Compile Include="Assets\Objects\HexTiles\Scripts\ListRandom.cs" />
     <Compile Include="Assets\Objects\Sheep\Scripts\Billboard.cs" />
     <Compile Include="Assets\Objects\Sheep\Scripts\Sheep.cs" />
+    <Compile Include="Assets\Objects\Simulation\Scripts\Simulation.cs" />
     <Compile Include="Assets\Sounds\Music\Music.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
