Fixed wonky camera. Added a lot more border tiles to hopefully fill the screen at all times. Also reduced shadowing distance, since things aren't that high. It solves performance issues due to more border tile trees.

--- a/Projects/SheepCreek/SheepCreek.csproj
+++ b/Projects/SheepCreek/SheepCreek.csproj
@@ -232,6 +232,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Objects\Dog\Scripts\Dog.cs" />
+    <Compile Include="Assets\Objects\Dog\Scripts\Tracker.cs" />
     <Compile Include="Assets\Objects\HexTile\Scripts\HexTile.cs" />
     <Compile Include="Assets\Objects\HexTiles\Scripts\GaussianRandom.cs" />
     <Compile Include="Assets\Objects\HexTiles\Scripts\HexTiles.cs" />
